Added an index featuring and internal link

--- a/index.html
+++ b/index.html
@@ -24,8 +24,21 @@
         The Following is some more info about my GOAT, Hakita. Enjoy!
     </p>
     </section>
-    
+
     <img src="images/ultrakill_cover_art.png" style="width: 64%; height: 64%; object-fit: contain;" alt="Coverart for 'Ultrakill'">
+
+    <section id="Index">
+    <h1>
+        Index
+    </h1>
+    <ul>
+        <li><a href="#Information On Why Hakita Is The GOAT!">Information On Why Hakita Is The GOAT</a></li>
+        <li><a href="#About My Goat!">About My Goat</a></li>
+        <li><a href="#Hakitas Talk / Presentation">Hakitas Talk / Presentation</a></li>
+        <li><a href="#Photos of Hakita's work">Photos of Hakita's work</a></li>
+        <li><a href="#Additional resources!">Additional resources</a></li>
+    </ul>
+    </section>
 
     <section, id="Information On Why Hakita Is The GOAT!">
     <h1>
