Major style update

--- a/index.html
+++ b/index.html
@@ -4,129 +4,135 @@
         Information On The G.O.A.T, Arsi Hakita Patala!
     </title>
 </head>
-<body>
-    <section, id="About My Goat!">
-    <h1>
+<body style="max-width: 1120px; margin: 0 auto; padding: 7%; background-color: #350404;">
+    <section id="About My Goat!" style="margin: 30px;">
+    <h1 style="color: rgb(230, 230, 230)">
         About My GOAT, Arsi Hakita Patala!
     </h1>
 
-    <p>
-        Hello, my name is Jack Mossberg. And I would like to introduce to you my 'GOAT' (.Greatest .Of .All .Time)
-        Arsi Hakita Patala or otherwise known as 'Hakita'. Online Hakita is known the mind behind the hit game <a href="https://store.steampowered.com/app/1229490/ULTRAKILL/">Ultrakill</a> 
-        and it's one of a kind sound-track.
+    <p style="color: rgb(231, 229, 229)">
+        Hello, my name is Jack Mossberg. I would like to introduce my 'GOAT' (Greatest Of All Time),
+        Arsi Hakita Patala, otherwise known as 'Hakita'. Online, Hakita is known as the mind behind the hit game <a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" style="color: #0066cc; text-decoration: none;">Ultrakill</a> 
+        and its one-of-a-kind soundtrack.
     </p>
-    <p>
-        While I have many reasons for nominating Hakita Arsi as my GOAT. My biggest reason would have to be his seemingly unwaivering resolve
-        when it comes to the subject of game development and/or music composition. Primarily when it comes to create the best possible product, even under
-        the insane pressure to deliver on his dream game Ultrakill.
+
+    <p style="color: rgb(231, 229, 229)">
+        While I have many reasons for nominating Arsi Hakita as my GOAT, my biggest reason is his unwavering resolve
+        in game development and music composition. This is evident in his dedication to creating the best possible product, even under
+        intense pressure to deliver on his dream game, Ultrakill.
     </p>
-    <p style="color: red;">
-        The Following is some more info about my GOAT, Hakita. Enjoy!
-    </p>
+
+    <p style="color: red; line-height: 1.6;">
+        The following is more information about my GOAT, Hakita. Enjoy!
+    </p>    
     </section>
 
-    <img src="images/ultrakill_cover_art.png" style="width: 64%; height: 64%; object-fit: contain;" alt="Coverart for 'Ultrakill'">
+    <img src="images/ultrakill_cover_art.png" style="width: 79%; height: auto; display: block; margin: 20px auto; border: 10px solid darkred;" alt="Cover art for 'Ultrakill'">
 
-    <section id="Index">
-    <h1>
+    <section id="Index" style="margin: 30px;">
+    <h1 style="color: rgb(231, 229, 229)">
         Index
     </h1>
-    <ul>
-        <li><a href="#Information On Why Hakita Is The GOAT!">Information On Why Hakita Is The GOAT</a></li>
-        <li><a href="#About My Goat!">About My Goat</a></li>
-        <li><a href="#Hakitas Talk / Presentation">Hakitas Talk / Presentation</a></li>
-        <li><a href="#Photos of Hakita's work">Photos of Hakita's work</a></li>
-        <li><a href="#Additional resources!">Additional resources</a></li>
+    <ul style="color: red;">
+        <li style="margin: 4px 0;"><a href="#Hakita's Accomplishments" style="color: lightblue">Hakita's Accomplishments</a></li>
+        <li style="margin: 4px 0;"><a href="#About My Goat!" style="color: lightblue">About My Goat</a></li>
+        <li style="margin: 4px 0;"><a href="#Hakita's Talk / Presentation" style="color: lightblue">Hakita's Talk / Presentation</a></li>
+        <li style="margin: 4px 0;"><a href="#Photos of Hakita's Work" style="color: lightblue">Photos of Hakita's Work</a></li>
+        <li style="margin: 4px 0;"><a href="#Additional Resources" style="color: lightblue">Additional Resources</a></li>
     </ul>
     </section>
 
-    <section, id="Information On Why Hakita Is The GOAT!">
-    <h1>
-        Accomplishments:
+    <section id="Hakita's Accomplishments" style="margin-bottom: 30px;">
+    <h1 style="color: rgb(231, 229, 229); text-align: center;">
+        Hakita's Accomplishments
     </h1>
-    <p>
-        These are just some of Hakita's well known accomplishments!
+    <p style="color: rgb(231, 229, 229);">
+        These are some of Hakita's well-known accomplishments!
     </p>
 
-    <table border="1">
-    <tr>
-        <th>Accomplishments</th>
-        <th>Resources</th>
-    <tr>
-        <td>Created and Developed <a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" target="_blank">Ultrakill</a> : As the main developer, Hakita designed ULTRAKILL, a fast-paced, retro-style first-person shooter inspired by classic games like Quake and Doom, combined with modern mechanics from Doom (2016) and character action games like Devil May Cry. The game was released in Early Access on Steam on September 3, 2020, and has been praised for its high skill ceiling, fluid movement, and intense gameplay.</td>
-        <td><a href="https://en.wikipedia.org/wiki/Ultrakill" target="_blank">https://en.wikipedia.org/wiki/Ultrakill</a></td>
+    <table border="0" style="width: 100%; border-collapse: collapse; margin: 20px 0; background-color: #490404;">
+    <tr style="background-color: #353333; color: rgb(231, 229, 229)">
+        <th style="padding: 10px; text-align: left;">Accomplishments</th>
+        <th style="padding: 10px; text-align: left;">Resources</th>
     </tr>
-    <tr>
-        <td>Composed <a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" target="_blank">Ultrakill</a>  Soundtrack: Under the pseudonym Heaven Pierce Her, Hakita composed nearly all of the game's soundtrack, which features a diverse range of genres including breakcore, symphonic metal, black metal, ambient, and lo-fi. The music dynamically shifts based on in-game situations, earning acclaim for its skillful use of leitmotifs and atmospheric enhancement.</td>
-        <td><a href="https://ultrakill.fandom.com/wiki/Developers" target="_blank">https://ultrakill.fandom.com/wiki/Developers</a></td>
+    <tr style="color: rgb(231, 229, 229)">
+        <td style="padding: 10px;">Created and Developed <a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" style="color: lightblue" target="_blank">Ultrakill</a>: As the main developer, Hakita designed ULTRAKILL, a fast-paced, retro-style first-person shooter inspired by classic games like Quake and Doom, combined with modern mechanics from Doom (2016) and character action games like Devil May Cry. The game was released in Early Access on Steam on September 3, 2020, and has been praised for its high skill ceiling, fluid movement, and intense gameplay.</td>
+        <td style="padding: 10px;"><a href="https://en.wikipedia.org/wiki/Ultrakill" style="color: lightblue;" target="_blank">Ultrakill Wikipedia Page</a></td>
     </tr>
-    <tr>
-        <td>Led Game Design and Direction: Handled all direction, game design, sound design, story, animation, and most level design for ULTRAKILL (except for specific levels like the Sandbox and 5-S), creating a cohesive vision that blends retro aesthetics with modern gameplay.</td>
-        <td><a href="https://ultrakill.fandom.com/wiki/Developers target=" target="_blank">https://ultrakill.fandom.com/wiki/Developers</a></td>
+    <tr style="color: rgb(231, 229, 229)">
+        <td style="padding: 10px;">Composed <a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" style="color: lightblue" target="_blank">Ultrakill</a> Soundtrack: Under the pseudonym Heaven Pierce Her, Hakita composed nearly all of the game’s soundtrack, which features a diverse range of genres including breakcore, symphonic metal, black metal, ambient, and lo-fi. The music dynamically shifts based on in-game situations, earning acclaim for its skillful use of leitmotifs and atmospheric enhancement.</td>
+        <td style="padding: 10px;"><a href="https://ultrakill.fandom.com/wiki/Developers" style="color: lightblue;" target="_blank">Ultrakill Developers Fandom Page</a></td>
     </tr>
-    <tr>
-        <td>Achieved Critical and Commercial Success: <a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" target="_blank">Ultrakill</a>  has received "Overwhelmingly Positive" reviews on Steam, with over 159,000 user reviews and a 97% positive rating as of June 2025. It has built a strong fanbase for its unique style-scoring system and challenging gameplay.</td>
-        <td><a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" target="_blank">https://store.steampowered.com/app/1229490/ULTRAKILL/</a></td>
+    <tr style="color: rgb(231, 229, 229)">
+        <td style="padding: 10px;">Led Game Design and Direction: Handled all direction, game design, sound design, story, animation, and most level design for ULTRAKILL (except for specific levels like the Sandbox and 5-S), creating a cohesive vision that blends retro aesthetics with modern gameplay.</td>
+        <td style="padding: 10px;"><a href="https://ultrakill.fandom.com/wiki/Developers" style="color: lightblue;" target="_blank">Ultrakill Developers Fandom Page</a></td>
     </tr>
-    <tr>
-        <td>Spearheaded Major Updates: Oversaw the "ULTRA_REVAMP" update on February 24, 2025, which included a near-complete overhaul of ULTRAKILL with new graphics, technical improvements, "Encore" levels with unique themes, and music from King Gizzard & the Lizard Wizard. This update addressed codebase issues to prepare for the Fraud layer (Layer 8).</td>
-        <td><a href="https://en.wikipedia.org/wiki/Ultrakill" target="_blank">https://en.wikipedia.org/wiki/Ultrakill</a></td>
+    <tr style="color: rgb(231, 229, 229)">
+        <td style="padding: 10px;">Achieved Critical and Commercial Success: <a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" style="color: lightblue;" target="_blank">Ultrakill</a> has received "Overwhelmingly Positive" reviews on Steam, with over 159,000 user reviews and a 97% positive rating as of June 2025. It has built a strong fanbase for its unique style-scoring system and challenging gameplay.</td>
+        <td style="padding: 10px;"><a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" style="color: lightblue;" target="_blank">Ultrakill Steam Page</a></td>
     </tr>
-    <tr>
-        <td>Built a Collaborative Team: Recruited and worked with a diverse team of programmers, artists, and quality assurance members from across the globe, including notable contributors like PITR (lead programmer) and Victoria Holland (lead 3D artist), fostering a community-driven development process.</td>
-        <td><a href="https://ultrakill.fandom.com/wiki/Developers" target="_blank">https://ultrakill.fandom.com/wiki/Developers</a></td>
+    <tr style="color: rgb(231, 229, 229)">
+        <td style="padding: 10px;">Spearheaded Major Updates: Oversaw the "ULTRA_REVAMP" update on February 24, 2025, which included a near-complete overhaul of ULTRAKILL with new graphics, technical improvements, "Encore" levels with unique themes, and music from King Gizzard & the Lizard Wizard. This update addressed codebase issues to prepare for the Fraud layer (Layer 8).</td>
+        <td style="padding: 10px;"><a href="https://en.wikipedia.org/wiki/Ultrakill" style="color: lightblue;" target="_blank">Ultrakill Wikipedia Page</a></td>
     </tr>
-    <tr>
-        <td>Developed as a Solo Project Initially: Began <a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" target="_blank">Ultrakill</a>  in 2018 as a solo project while studying game design in Finland, transitioning to a full-time endeavor after its success allowed him to leave school and focus on development.</td>
-        <td><a href="https://en.wikipedia.org/wiki/Ultrakill" target="_blank">https://en.wikipedia.org/wiki/Ultrakill</a></td>
+    <tr style="color: rgb(231, 229, 229)">
+        <td style="padding: 10px;">Built a Collaborative Team: Recruited and worked with a diverse team of programmers, artists, and quality assurance members from across the globe, including notable contributors like PITR (lead programmer) and Victoria Holland (lead 3D artist), fostering a community-driven development process.</td>
+        <td style="padding: 10px;"><a href="https://ultrakill.fandom.com/wiki/Developers" style="color: lightblue;" target="_blank">Ultrakill Developers Fandom Page</a></td>
+    </tr>
+    <tr style="color: rgb(231, 229, 229)">
+        <td style="padding: 10px;">Developed as a Solo Project Initially: Began <a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" style="color: lightblue;" target="_blank">Ultrakill</a> in 2018 as a solo project while studying game design in Finland, transitioning to a full-time endeavor after its success allowed him to leave school and focus on development.</td>
+        <td style="padding: 10px;"><a href="https://en.wikipedia.org/wiki/Ultrakill" style="color: lightblue;" target="_blank">Ultrakill Wikipedia Page</a></td>
     </tr>
     </table>
     </section>
 
-    <section, id="Hakitas Talk / Presentation">
-    <h1>
-        Hakitas Talk / Presentation About the Development of <a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" target="_blank">Ultrakill</a> !
+    <section id="Hakita's Talk / Presentation" style="margin: 30px;">
+    <h1 style="color: rgb(231, 229, 229); text-align: center;">
+        Hakita's Talk / Presentation About the Development of <a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" style="color: lightblue;" target="_blank">Ultrakill</a>!
     </h1>
     <iframe 
         width="640" height="360" 
         src="https://www.youtube.com/embed/LK6-_rY7GOs" 
-        type="video/HTML5" 
+        type="video/html5" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen>
+        allowfullscreen 
+        style="display: block; margin: 20px auto; border: 2px solid darkred;">
     </iframe>
     </section>
 
-    <section, id="Photos of Hakita's work">
-    <h1>
-        Screenshots From Hakitas Hit Game <a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" target="_blank">Ultrakill</a>!
+    <section id="Photos of Hakita's Work" style="margin: 30px;">
+    <h1 style="color:rgb(231, 229, 229); text-align: center;">
+        Screenshots From Hakita's Hit Game <a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" style="color: lightblue;" target="_blank">Ultrakill</a>!
     </h1>
-    <img src="images/ultrakill_game_img_1.webp" style="width: 44%; height: 44%; object-fit: contain;" alt="Gameplay screenshot of 'Ultrakill'">
-    <img src="images/ultrakill_game_img_2.webp" style="width: 44%; height: 44%; object-fit: contain;" alt="Gameplay screenshot of 'Ultrakill'">
-    <img src="images/ultrakill_game_img_3.webp" style="width: 44%; height: 44%; object-fit: contain;" alt="Gameplay screenshot of 'Ultrakill'">
-    <img src="images/ultrakill_game_img_4.webp" style="width: 44%; height: 44%; object-fit: contain;" alt="Gameplay screenshot of 'Ultrakill'">
+    <div style="text-align: center;">
+        <img src="images/ultrakill_game_img_1.webp" style="width: 44%; height: auto; margin: 10px; border: 2px solid darkred;" alt="Gameplay screenshot of 'Ultrakill'">
+        <img src="images/ultrakill_game_img_2.webp" style="width: 44%; height: auto; margin: 10px; border: 2px solid darkred;" alt="Gameplay screenshot of 'Ultrakill'">
+        <img src="images/ultrakill_game_img_3.webp" style="width: 44%; height: auto; margin: 10px; border: 2px solid darkred;" alt="Gameplay screenshot of 'Ultrakill'">
+        <img src="images/ultrakill_game_img_4.webp" style="width: 44%; height: auto; margin: 10px; border: 2px solid darkred;" alt="Gameplay screenshot of 'Ultrakill'">
+    </div>
     </section>
 
-    <section, id="Additional resources!">
-    <h1>
-        Additional Resources!
+    <section id="Additional Resources" style="margin-bottom: 30px;">
+    <h1 style="color: rgb(231, 229, 229); text-align: center;">
+        Additional Resources
     </h1>
-    <table border="1">
-        <tr>
-            <th>Resource</th>
-            <th>Link</th>
+    <table border="0" style="border-collapse: collapse; margin: 20px 0; background-color: #490404; width: 100%;">
+        <tr style="background-color: #353333; color: rgb(231, 229, 229);">
+            <th style="padding: 10px; text-align: center;">Resource</th>
+            <th style="padding: 10px; text-align: center;">Link</th>
         </tr>
-        <tr>
-            <td>Ultrakill steam page</td>
-            <td><a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" target="_blank">Click me!</a></td>
+        <tr style="color: rgb(231, 229, 229);">
+            <td style="padding: 10px;">Ultrakill Steam Page</td>
+            <td style="padding: 10px;"><a href="https://store.steampowered.com/app/1229490/ULTRAKILL/" style="color: lightblue; text-decoration: none;" target="_blank">Ultrakills Steam</a></td>
         </tr>
-        <tr>
-            <td>Ultrakill merch shop</td>
-            <td><a href="https://teestow.com/product-category/ultrakill-merch/" target="_blank">Click me!</a></td>
+        <tr style="color: rgb(231, 229, 229);">
+            <td style="padding: 10px;">Ultrakill Merch Shop</td>
+            <td style="padding: 10px;"><a href="https://teestow.com/product-category/ultrakill-merch/" style="color: lightblue; text-decoration: none;" target="_blank">Ultrakills Merch Shop</a></td>
         </tr>
-        <tr>
-            <td>Ultrakill Wiki</td>
-            <td><a href="https://en.wikipedia.org/wiki/Ultrakill" target="_blank">Click me!</a></td>
+        <tr style="color: rgb(231, 229, 229);">
+            <td style="padding: 10px;">Ultrakill Wiki</td>
+            <td style="padding: 10px;"><a href="https://en.wikipedia.org/wiki/Ultrakill" style="color: lightblue; text-decoration: none;" target="_blank">Ultrakills Wikipedia Page</a></td>
         </tr>
     </table>
     </section>
