Fixed some alignment issues and put the index inside of a table

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </title>
 </head>
 <body style="max-width: 1120px; margin: 0 auto; padding: 7%; background-color: #350404;">
-    <section id="About My Goat!" style="margin: 30px;">
+    <section id="About My Goat!" style="margin: 30px; text-align: center;">
     <h1 style="color: rgb(230, 230, 230)">
         About My GOAT, Arsi Hakita Patala!
     </h1>
@@ -29,24 +29,34 @@
 
     <img src="images/ultrakill_cover_art.png" style="width: 79%; height: auto; display: block; margin: 20px auto; border: 10px solid darkred;" alt="Cover art for 'Ultrakill'">
 
-    <section id="Index" style="margin: 30px;">
-    <h1 style="color: rgb(231, 229, 229)">
-        Index
-    </h1>
-    <ul style="color: red;">
-        <li style="margin: 4px 0;"><a href="#Hakita's Accomplishments" style="color: lightblue">Hakita's Accomplishments</a></li>
-        <li style="margin: 4px 0;"><a href="#About My Goat!" style="color: lightblue">About My Goat</a></li>
-        <li style="margin: 4px 0;"><a href="#Hakita's Talk / Presentation" style="color: lightblue">Hakita's Talk / Presentation</a></li>
-        <li style="margin: 4px 0;"><a href="#Photos of Hakita's Work" style="color: lightblue">Photos of Hakita's Work</a></li>
-        <li style="margin: 4px 0;"><a href="#Additional Resources" style="color: lightblue">Additional Resources</a></li>
-    </ul>
+    <section id="Index" style="margin-left: 450px; margin-right: 450px; margin-bottom: 70px; margin-top: 70px;">
+    <table border="0" style="border-collapse: collapse; margin: 20px 0; background-color: #490404; width: 100%;">
+        <tr style="background-color: #353333; color: rgb(231, 229, 229);">
+            <th style="padding: 10px; text-align: center;">Index</th>
+        </tr>
+        <tr style="color: rgb(231, 229, 229); text-align: center;">
+            <td style="padding: 10px;"><a href="#About My Goat!" style="color: lightblue">About My Goat</a></td>
+        </tr>
+        <tr style="color: rgb(231, 229, 229); text-align: center;">
+            <td style="padding: 10px;"><a href="#Hakita's Accomplishments" style="color: lightblue">Hakita's Accomplishments</a></td>
+        </tr>
+        <tr style="color: rgb(231, 229, 229); text-align: center;">
+            <td style="padding: 10px;"><a href="#Hakita's Talk / Presentation" style="color: lightblue">Hakita's Talk / Presentation</a></td>
+        </tr>
+        <tr style="color: rgb(231, 229, 229); text-align: center;">
+            <td style="padding: 10px;"><a href="#Photos of Hakita's Work" style="color: lightblue">Photos of Hakita's Work</a></td>
+        </tr>
+        <tr style="color: rgb(231, 229, 229); text-align: center;">
+            <td style="padding: 10px;"><a href="#Additional Resources" style="color: lightblue">Additional Resources</a></td>
+        </tr>
+    </table>
     </section>
 
     <section id="Hakita's Accomplishments" style="margin-bottom: 30px;">
     <h1 style="color: rgb(231, 229, 229); text-align: center;">
         Hakita's Accomplishments
     </h1>
-    <p style="color: rgb(231, 229, 229);">
+    <p style="color: rgb(231, 229, 229); text-align: center;">
         These are some of Hakita's well-known accomplishments!
     </p>
 
